@@ -39,7 +39,13 @@ ENV JAVA_OPTS="-XX:+UseContainerSupport \
                -XX:+UseG1GC \
                -XX:+HeapDumpOnOutOfMemoryError \
                -XX:HeapDumpPath=/tmp/heapdump.hprof \
-               -Djava.security.egd=file:/dev/./urandom"
+               -Djava.security.egd=file:/dev/./urandom \
+               --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+               --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
+               --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+               --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+               --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+               --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
 
 EXPOSE 8080
 
